ispCP ω 1.0.4 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-01-25 Marc Pujol
	- ENGINE:
		* Fixed #2180: /var/log/ispcp/logdb doesn't get properly updated and is causing wrong statistics

2010-01-22 Marc Pujol
	- SETUP:
		* Fixed small error in the squeeze required packages list

2010-01-18 Benedikt Heintel
	- ENGINE:
		* Fixed #2167: Traffic counts wrong

2010-01-18 Sascha Bay
	- GUI:
		* Fixed #1717: Domain Alias Screen Needs Cosmetic Changes
		* Partially Fixed #2089: Add Customer with IDN alias domains - (Only first part)

2010-01-17 Sascha Bay
	- GUI:
		* Fixed #2170: "Domain expire" value gets lost on failure with Domain name

2010-01-17 Thomas Wacker
	- GUI:
		* Fixed #2172: Support system - html tag shouldn't displayed

2010-01-17 Benedikt Heintel
	- GUI:
		* Fixed #2088: Possibility to add databases w/o db users and db users w/o databases (based on a patch by Sascha Bay)

2010-01-16 Peter Ziergöbel
	- GUI:
		* Fixed #2156: Reseller hosting plan update error

2010-01-16 Benedikt Heintel
	- GUI:
		* Fixed #2165: Reseller can add alias while disabled by the admin (based on a patch by Sascha Bay)

2010-01-16 Marc Pujol
	- GUI:
		* Fixed #2168: Error Message in Browser: HY093 (whats wrong with my database?)

2010-01-13 Marc Pujol
	- GUI:
		* Updated spanish language files

2010-01-13 Sascha Bay
	- GUI:
		* Fixed #2164: Manual dns record's - Unable to access to the interface in some circumstances

2010-01-13 Laurent Declercq
	- GUI:
		* Fixed #2160: Backup button not exist in client's GUI
		* Added missing '$domain_expires|$dmn_expire' && '$allowbackup' && 
		 '$domain_dns|$dmn_dns' variables in all 'list()' that are linked to 
		  the function 'get_domain_default_props()'
		* Fixed wrong syntax for svn Id keyword in several files

2010-01-12 Thomas Wacker
	- GUI:
		* Fixed #2158: Wrong calculation for traffic in update hosting plan

2010-01-07 Peter Ziergöbel
	- GUI:
		* Fixed #2125: Domain expire date can't set to "Never" (N/A) when it changed
