@@ -1,6 +1,10 @@
 ispCP ω 1.0.4 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2010-01-27 Marc Pujol
+	- GUI:
+		* Fixed #2183: Hosting plans not available for purchasing error
+
 2010-01-25 Marc Pujol
 	- ENGINE:
 		* Fixed #2180: /var/log/ispcp/logdb doesn't get properly updated and is causing wrong statistics
